[gd_scene load_steps=48 format=3 uid="uid://bhdcmdrktl4xs"]

[ext_resource type="Script" path="res://Farming/FarmingTiles/farmable_tile.gd" id="1_lxn3k"]
[ext_resource type="Resource" uid="uid://bxc1cyfbquibd" path="res://Farming/FarmingTiles/Crops/Blank.tres" id="2_b2nj6"]
[ext_resource type="Texture2D" uid="uid://nsrjbbj6clnd" path="res://Assets/plowed_soil.png" id="3_ars1p"]
[ext_resource type="Texture2D" uid="uid://pq7wdsrswk4k" path="res://Assets/corn.png" id="3_qe3be"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i47ax"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8rt3"]
atlas = ExtResource("3_qe3be")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_llkpr"]
atlas = ExtResource("3_qe3be")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kruxk"]
atlas = ExtResource("3_qe3be")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv7pm"]
atlas = ExtResource("3_qe3be")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_olrjo"]
atlas = ExtResource("3_qe3be")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bejev"]
atlas = ExtResource("3_qe3be")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyis4"]
atlas = ExtResource("3_qe3be")
region = Rect2(600, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne66w"]
atlas = ExtResource("3_qe3be")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nej5"]
atlas = ExtResource("3_qe3be")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hngo"]
atlas = ExtResource("3_qe3be")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0yj6"]
atlas = ExtResource("3_qe3be")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xen5"]
atlas = ExtResource("3_qe3be")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5hpv"]
atlas = ExtResource("3_qe3be")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa7e7"]
atlas = ExtResource("3_qe3be")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ognm"]
atlas = ExtResource("3_qe3be")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_05kcs"]
atlas = ExtResource("3_qe3be")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc4g6"]
atlas = ExtResource("3_qe3be")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hid2l"]
atlas = ExtResource("3_qe3be")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1udb"]
atlas = ExtResource("3_qe3be")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5fgd"]
atlas = ExtResource("3_qe3be")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dru6v"]
atlas = ExtResource("3_qe3be")
region = Rect2(600, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_71sec"]
atlas = ExtResource("3_qe3be")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wql1j"]
atlas = ExtResource("3_qe3be")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpe6"]
atlas = ExtResource("3_qe3be")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3crax"]
atlas = ExtResource("3_qe3be")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1o40"]
atlas = ExtResource("3_qe3be")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8bwi"]
atlas = ExtResource("3_qe3be")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_33kgx"]
atlas = ExtResource("3_qe3be")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_38i57"]
atlas = ExtResource("3_qe3be")
region = Rect2(600, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_slar5"]
atlas = ExtResource("3_qe3be")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6176"]
atlas = ExtResource("3_qe3be")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd0ro"]
atlas = ExtResource("3_qe3be")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pecu5"]
atlas = ExtResource("3_qe3be")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyp78"]
atlas = ExtResource("3_qe3be")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3dkr"]
atlas = ExtResource("3_qe3be")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjxqg"]
atlas = ExtResource("3_qe3be")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2qmp"]
atlas = ExtResource("3_qe3be")
region = Rect2(600, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_7l7wl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8rt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llkpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kruxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv7pm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olrjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bejev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyis4")
}],
"loop": true,
"name": &"Growing-0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne66w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nej5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hngo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0yj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xen5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5hpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa7e7")
}],
"loop": true,
"name": &"Growing-1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ognm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05kcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc4g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hid2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1udb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5fgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dru6v")
}],
"loop": true,
"name": &"Planted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_71sec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wql1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3crax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1o40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8bwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33kgx")
}],
"loop": true,
"name": &"Ripe",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38i57")
}],
"loop": true,
"name": &"Tilled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_slar5")
}],
"loop": true,
"name": &"Untilled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6176")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd0ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pecu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyp78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3dkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjxqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2qmp")
}],
"loop": true,
"name": &"Wasted",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vvumk"]
atlas = ExtResource("3_ars1p")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_voabb"]
atlas = ExtResource("3_ars1p")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1d1s0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvumk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voabb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_fhk8u"]
resource_local_to_scene = true
polygon = PackedVector2Array(-6, -7, -6, 5, 7, 5, 8, -7)

[node name="FarmTile" type="StaticBody2D"]
scale = Vector2(2, 2)
collision_layer = 4
script = ExtResource("1_lxn3k")
crop_data = ExtResource("2_b2nj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i47ax")

[node name="FarmableTile" type="Node2D" parent="."]

[node name="CropDisplay" type="AnimatedSprite2D" parent="FarmableTile"]
z_index = 1
scale = Vector2(0.32, 0.32)
sprite_frames = SubResource("SpriteFrames_7l7wl")
animation = &"Wasted"

[node name="Dirt" type="AnimatedSprite2D" parent="FarmableTile"]
visible = false
sprite_frames = SubResource("SpriteFrames_1d1s0")
frame_progress = 0.580835

[node name="Occluder" type="LightOccluder2D" parent="FarmableTile"]
visible = false
occluder = SubResource("OccluderPolygon2D_fhk8u")
occluder_light_mask = 0
